# overkey

./: .gitignore  CMakeLists.txt  README.md  watch.sh
cmake/: 3rdParty.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/hotkeys/: CMakeLists.txt  hotkeys.cpp  hotkeys.h  scancodes.hpp  sequence.hpp  stroke.hpp
